# Ai-news

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  PROJECT_DOCUMENTATION.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_add_trgm_and_fulltext_indexes.py  0003_add_image_url_to_articles.py  0004_add_notify_to_teams.py  0005_seed_sources.py  0006_seed_categories.py
docker/ollama/: pull-model.sh
docker/postgres/: init.sql
scripts/: api_test.py  backfill_content.py  backfill_images.py  scrape_and_summarize.py  scrape_social.py
src/: main.py
src/bot/: __init__.py  adapter.py  bot_app.py
src/config/: celery_app.py  classification_prompts.py  health.py  logging.py  scoring_rules.py  seed_categories.py  seed_sources.py  settings.py
src/dashboard/: __init__.py  routes.py
src/llm/: __init__.py  base.py  claude_provider.py  gemini_provider.py  ollama_provider.py  openai_provider.py  router.py
src/models/: __init__.py  article.py  article_category.py  base.py  category.py  post_log.py  source.py  subscription.py  summary.py
src/pipeline/: __init__.py  base.py  classify.py  dedup.py  ingest.py  orchestrator.py  route.py  score.py  summarize.py
src/scheduler/: alert_tasks.py  digest_tasks.py  scrape_tasks.py
src/scrapers/: article_fetcher.py  arxiv_scraper.py  base.py  content_cleaner.py  firecrawl_scraper.py  github_scraper.py  hn_scraper.py  image_extractor.py  linkedin_scraper.py  newsapi_scraper.py  (+7 more)
tests/: conftest.py
(+55 files in other folders)
